--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
   </head>
   <body>
-    <noscript>
-      This is your fallback content in case JavaScript fails to load.
-    </noscript>
+    <noscript>This is your fallback content in case JavaScript fails to load.</noscript>
     <div id="app"></div>
     <!-- Todo: only include in production -->
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
