--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
   </head>
   <body>
-    <noscript>This is your fallback content in case JavaScript fails to load.</noscript>
     <div id="app"></div>
     <!-- Todo: only include in production -->
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
     <!-- built files will be auto injected -->
+    <noscript>Preview design comps in the browser with Compdrop. This application requires JavaScript to be enabled.</noscript>
   </body>
 </html>
